# aruco_ros

aruco_msgs/: CMakeLists.txt  package.xml
aruco_msgs/msg/: Marker.msg
aruco_msgs/srv/: MarkerReq.srv  MarkersReq.srv
aruco_ros/: CMakeLists.txt
aruco_ros/launch/: double.launch
aruco_ros/src/: simple_server.cpp  simple_single.cpp
